--- a/frontweb/src/pages/Admin/Navbar/styles.css
+++ b/frontweb/src/pages/Admin/Navbar/styles.css
@@ -1,9 +1,6 @@
-ul {
+.admin-nav-items-container {
   display: flex;
   justify-content: space-around;
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
 }
 
 .admin-nav-container {
@@ -41,7 +38,7 @@ ul {
 }
 
 @media (min-width: 1200px) {
-  ul {
+  .admin-nav-items-container {
     justify-content: unset;
     flex-direction: column;
   }
