--- a/frontweb/src/pages/Admin/Users/UserFilter/styles.css
+++ b/frontweb/src/pages/Admin/Users/UserFilter/styles.css
@@ -1,52 +1,52 @@
-.product-filter-container {
+.user-filter-container {
   margin-bottom: 20px;
   padding: 15px;
 }
 
-.product-filter-name-container {
+.user-filter-name-container {
   display: flex;
   align-items: center;
   border-bottom: 1px solid #e1e1e1;
   margin-bottom: 10px;
 }
 
-.product-filter-name-container input {
+.user-filter-name-container input {
   border: none;
   background-color: unset;
 }
 
-.product-filter-name-container input:focus {
+.user-filter-name-container input:focus {
   box-shadow: none;
 }
 
-.product-filter-name-container input::placeholder {
+.user-filter-name-container input::placeholder {
   color: #9e9e9e;
 }
 
-.product-filter-search-icon {
+.user-filter-search-icon {
   border: none;
   background-color: unset;
 }
 
-.product-filter-bottom-container {
+.user-filter-bottom-container {
   display: flex;
 }
 
-.product-filter-category-container {
+.user-filter-category-container {
   flex: 1;
   margin-right: 10px;
 }
 
-.btn-product-filter-clear {
+.btn-user-filter-clear {
   font-weight: bold !important;
   border-radius: 10px !important;
 }
 
-.btn-product-filter-word {
+.btn-user-filter-word {
   display: none;
 }
 
-.product-filter-select__control {
+.user-filter-select__control {
   font-size: 1em;
   letter-spacing: -0.015em;
   color: #263238;
@@ -54,49 +54,49 @@
   border-bottom: 1px solid #e1e1e1 !important;
 }
 
-.product-filter-select__placeholder {
+.user-filter-select__placeholder {
   color: #9e9e9e !important;
 }
 
-.product-filter-select__indicator-separator {
+.user-filter-select__indicator-separator {
   display: none;
 }
 
 @media (min-width: 576px) {
-  .btn-product-filter-word {
+  .btn-user-filter-word {
     display: unset;
   }
 }
 
 @media (min-width: 768px) {
-  .btn-product-filter-word {
+  .btn-user-filter-word {
     display: none;
   }
 
-  .product-filter-container {
+  .user-filter-container {
     margin-left: 20px;
     flex: 1;
     margin-bottom: 0;
     padding: 10px 15px;
   }
 
-  .product-filter-form {
+  .user-filter-form {
     display: flex;
   }
 
-  .product-filter-name-container {
+  .user-filter-name-container {
     flex: 1;
     margin-right: 20px;
     margin-bottom: 0;
   }
 
-  .product-filter-bottom-container {
+  .user-filter-bottom-container {
     flex: 1;
   }
 }
 
 @media (min-width: 992px) {
-  .btn-product-filter-word {
+  .btn-user-filter-word {
     display: unset;
   }
 }
