upload image preview

--- a/frontweb/src/pages/Admin/Products/Form/styles.css
+++ b/frontweb/src/pages/Admin/Products/Form/styles.css
@@ -22,6 +22,11 @@
   margin-bottom: 30px;
 }
 
+.upload-img-ctr img {
+  width: 195px;
+  margin-bottom: 10px;
+}
+
 .upload-img-btn {
   cursor: pointer;
   width: 213px;
